# biologidex

./: ARCHITECTURE_INDEX.md  CLAUDE.md  CLIENT_REFACTORING_PLAN.md  DATA_MODEL_FIXES.md  DEPLOYMENT_NOTES.md  DEX_ANALYSIS_INDEX.md  DEX_OVERHAUL_EXECUTIVE_SUMMARY.md  DEX_OVERHAUL_IMPLEMENTATION_PLAN.md  DJANGO_ARCHITECTURE.md  IMAGE_UPLOAD_IMPLEMENTATION_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PWA_CACHE_STRATEGY.md  README.md  REFACTORING_IMPLEMENTATION_STATUS.md  REFACTORING_SUMMARY.md  SERVER_QUICK_REFERENCE.md  TREE_IMPLEMENTATION_PLAN.md  bookmark.md  client-host.md  client_refactor.md  dex_architecture_diagram.txt  dex_overhaul.md  dex_quick_reference.txt  dex_state_analysis.md  dex_system_summary.txt  feed_plan.md  image-handling-updates.md  image-overhaul-plan.md  manual_entry.md  reingold_tilford.md  social.md  taxonomic_data.md  taxonomic_tree.md  taxonomic_tree_dynamic.md  taxonomic_tree_implementation_checklist.md  taxonomic_tree_server.md  template.env  tree_improvements.md  (+2 more)
server/: .env.example  .env.production.example  .gitignore  Dockerfile.production  README.md  SCRIPTS.md  SETUP.md  debug_canis_lookup.py  development-guide.md  development.md  docker-compose.monitoring.yml  docker-compose.production.yml  docker-compose.yml  gunicorn.conf.py  https-implementation-plan.md  init.sql  manage.py  migration-audit.md  operations.md  pwa-installation-fix.md  pyproject.toml  redis.conf  test_canis_lookup.py
server/accounts/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
(+376 files in other folders)
